# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  07 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Added "nosendhost" dhcp option so users can request not to send their
    machines hostname by default. Fixes #98132

  04 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Added a rename module to rename interfaces based on MAC address
    (preferred) or current name. Fixes #76328

  03 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed module depends in net.lo

    Remove the "no net scripts in boot runlevel" restriction as we now
    have a hotplug policy setup instead

  02 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    net.lo no longer needs find or diff

  01 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Minor tweaks to all dhcp modules - basically better quoting so that
    the eval ${dhcpclient} calls work better

    pump can now be backgrounded

    Tweaked the dhcp helpers so that more code is shared

    A few tweaks to runscript.sh and rc-services.sh to avoid races

    bootmisc now cleans /var/lib/net-scripts/state/*

  30 Jun 2005; Roy Marples <uberlord@gentoo.org>:

    pump can now use route metrics and store it's configs in
    /var/lib/net-scripts/state/${iface}

  29 Jun 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now parses dhclient_eth0 for -cf parameter to set ${cffile}
    dhclient now strips lines starting with script and send host-name
    from ${cffile} and adds send host-name "${HOSTNAME}"; at the top
    To stop this behaviour, add dhclient_edit_config="no" to /etc/conf.d/net
    Fixes #96322

    Removed killing udhcpc hard as it now dies nicely

    wireless.runlevel now works

  28 Jun 2005; Mike Frysinger <vapier@gentoo.org>:

    Add davfs to the net list #97283 by Erik Grinaker.

  28 Jun 2005; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant now respects the background=no option if
    wpa_suppliant>=0.4.0 is installed
